feat(app): add new nav item

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <ul style="margin:48px auto;width:fit-content;font:24px/36px monospace;color:darkslateblue;">
     <li><a href="/1kb.html">1 kb</a></li>
     <li><a href="/2kb.html">2 kb</a></li>
+    <li><a href="/3kb.html">3 kb</a></li>
   </ul>
   <style>
     li > a {
