feat(3page): extend

--- a/3kb.html
+++ b/3kb.html
@@ -5,7 +5,16 @@
   <h1 style="text-align:center;font:300 36px/48px monospace;">UFO SIGHTINGS<br/>TAKEN SERIOUSLY BY THE U.S. GOVERNMENT</h1><ul><li><b>February 24, 1942</b>: Los Angeles. <a href="https://en.wikipedia.org/wiki/Battle_of_Los_Angeles" target="_blank">Read more</a></li>
     <li><b>June 21, 1947</b>:	Maury Island. <a href="https://en.wikipedia.org/wiki/Maury_Island_incident" target="_blank">Read more</a></li>
     <li><b>June 24, 1947</b>:	Maury Island. <a href="https://en.wikipedia.org/wiki/Kenneth_Arnold_UFO_sighting" target="_blank">Read more</a></li>
-
+    <li><b>July 1947</b>: Roswell. <a href="https://en.wikipedia.org/wiki/Roswell_UFO_incident" target="_blank">Read more</a></li>
+    <li><b>January 7, 1948</b>: Maysville. <a href="https://en.wikipedia.org/wiki/Mantell_UFO_Incident" target="_blank">Read more</a></li>
+    <li><b>July 24, 1948</b>: Montgomery. <a href="https://en.wikipedia.org/wiki/Chiles-Whitted_UFO_Encounter" target="_blank">Read more</a></li>
+    <li><b>October 1, 1948</b>: Fargo. <a href="https://en.wikipedia.org/wiki/Gorman_Dogfight" target="_blank">Read more</a></li>
+    <li><b>May 11, 1950</b>: McMinnville. <a href="https://en.wikipedia.org/wiki/McMinnville_UFO_photographs" target="_blank">Read more</a></li>
+    <li><b>August 15, 1950</b>: Great Falls. <a href="https://en.wikipedia.org/wiki/Mariana_UFO_incident" target="_blank">Read more</a></li>
+    <li><b>August 25, 1951</b>: Lubbock. <a href="https://en.wikipedia.org/wiki/Lubbock_Lights" target="_blank">Read more</a></li>
+    <li><b>July 24, 1952</b>:	Carson Sink. <a href="https://en.wikipedia.org/wiki/Carson_Sink_UFO_incident" target="_blank">Read more</a></li>
+    <li><b>May 24, 1952</b>: Burbank. <a href="https://en.wikipedia.org/wiki/Orfeo_Angelucci" target="_blank">Read more</a></li>
+    <li><b>July 13, 1952</b>: Washington, D.C. <a href="https://en.wikipedia.org/wiki/1952_Washington_D.C._UFO_incident" target="_blank">Read more</a></li>
   </ul>
 </body>
 
