feat(10kb-page): style result

--- a/10kb.html
+++ b/10kb.html
@@ -207,7 +207,10 @@
     display: none;
     margin-top: 2em;
     padding: 2em;
-    border: 2px dashed #07624D;
+    border: 2px dashed white;
+    color: white;
+    max-width: 80vw;
+    margin: 40px auto;
   }
 
   @media only screen and (max-width: 500px) {
