--- a/kb.html
+++ b/kb.html
@@ -1,13 +1,17 @@
 <body style="background: -webkit-linear-gradient(to bottom, #000000, #434343);background: linear-gradient(to bottom, #000000, #434343);color:white;font: 24px/48px monospace;padding:24px;">
-  <h1>List of Star Trek Characters</h1>
+  <h1>List of Doctor Who Characters</h1>
   <ul style="list-style: cjk-ideographic;" id="result"></ul>
   <script>
-    const URL_CHARACTERS = 'http://stapi.co/api/v1/rest/character/search?pageSize=20&pageNumber=3&sort=yearOfBirth,ASC'
+    const URL_CHARACTERS = 'https://doctorwhoapi.herokuapp.com/characters'
     const resultNode = document.getElementById("result")
    
     fetch(URL_CHARACTERS)
     .then((response) => {
-      return response.json();
+      if (response.ok) {
+        return response.json();
+      } else {
+        return resultNode.innerHTML = response.statusText + '<br />Sorry mate, it seems the TARDIS telepathic circuits are overloaded right now. try again later.'
+      }
     })
     .then((data) => {
       data.characters.forEach(character => {
@@ -16,8 +20,8 @@
       itemNode.innerHTML = `
       name: ${character.name}
       <br />
-      ${character.yearOfBirth ? `birth: ${character.yearOfBirth}<br />` : ''}
-      ${character.yearOfDeath ? `death: ${character.yearOfDeath}` : ''}
+      ${character.species ? `species: ${character.species}<br />` : ''}
+      ${character.actorOrActress ? `actor/actress: ${character.actorOrActress}` : ''}
       `
       resultNode.appendChild(itemNode)
       })
