feast(nav): alter wording

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <ul style="margin:48px auto;width:fit-content;font:24px/36px monospace;color:darkslateblue;">
     <li><a href="/1kb.html">1 kb</a></li>
     <li><a href="/1.5kb.html">1.5 kb</a></li>
-    <li><a href="/api-fetch.html">with fetched API data (1.6kb) </a></li>
+    <li><a href="/api-fetch.html">1.6kb* (with fetched API data) </a></li>
     <li><a href="/2kb.html">2 kb</a></li>
     <li><a href="/12kb.html">12 kb</a></li>
   </ul>
